Fixed spacing on header content

--- a/css/creative.css
+++ b/css/creative.css
@@ -182,7 +182,7 @@ header .header-content {
   color: #5bc0de;
   position: relative;
   text-align: center;
-  padding: 50px 15px 100px;
+  padding: 100px 15px 100px;
   width: 100%;
 }
 
